tests/type_errors/optflatmap_wrong_return.nos
# expect_error: type mismatch
# optFlatMap lambda must return Option, not raw value
main() = Some(42).optFlatMap(x => x + 1)
